# gnn_onnx

./: README.md
datanmodels/: g_model_full.onnx
gnn/: 0-DM-CompiledGNN.ipynb  hyper_parameters.ckpt
src/: CMakeLists.txt  inference.cpp
